; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/chelsio/extr_vsc7326.c_mac_enable.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/chelsio/extr_vsc7326.c_mac_enable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cmac = type { i32, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@WM_ENABLE = common dso_local global i32 0, align 4
@MAC_DIRECTION_RX = common dso_local global i32 0, align 4
@MAC_DIRECTION_TX = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.cmac*, i32)* @mac_enable to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mac_enable(%struct.cmac* %0, i32 %1) #0 {
  %3 = alloca %struct.cmac*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.cmac* %0, %struct.cmac** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = load %struct.cmac*, %struct.cmac** %3, align 8
  %8 = getelementptr inbounds %struct.cmac, %struct.cmac* %7, i32 0, i32 1
  %9 = load %struct.TYPE_2__*, %struct.TYPE_2__** %8, align 8
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  store i32 %11, i32* %6, align 4
  %12 = load %struct.cmac*, %struct.cmac** %3, align 8
  %13 = getelementptr inbounds %struct.cmac, %struct.cmac* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 8
  %15 = load i32, i32* %6, align 4
  %16 = call i32 @REG_HIGH_LOW_WM(i32 1, i32 %15)
  %17 = load i32, i32* @WM_ENABLE, align 4
  %18 = call i32 @vsc_write(i32 %14, i32 %16, i32 %17)
  %19 = load %struct.cmac*, %struct.cmac** %3, align 8
  %20 = getelementptr inbounds %struct.cmac, %struct.cmac* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 8
  %22 = load i32, i32* %6, align 4
  %23 = call i32 @REG_MODE_CFG(i32 %22)
  %24 = call i32 @vsc_read(i32 %21, i32 %23, i32* %5)
  %25 = load i32, i32* %4, align 4
  %26 = load i32, i32* @MAC_DIRECTION_RX, align 4
  %27 = and i32 %25, %26
  %28 = icmp ne i32 %27, 0
  br i1 %28, label %29, label %32

29:                                               ; preds = %2
  %30 = load i32, i32* %5, align 4
  %31 = or i32 %30, 2
  store i32 %31, i32* %5, align 4
  br label %32

32:                                               ; preds = %29, %2
  %33 = load i32, i32* %4, align 4
  %34 = load i32, i32* @MAC_DIRECTION_TX, align 4
  %35 = and i32 %33, %34
  %36 = icmp ne i32 %35, 0
  br i1 %36, label %37, label %40

37:                                               ; preds = %32
  %38 = load i32, i32* %5, align 4
  %39 = or i32 %38, 1
  store i32 %39, i32* %5, align 4
  br label %40

40:                                               ; preds = %37, %32
  %41 = load %struct.cmac*, %struct.cmac** %3, align 8
  %42 = getelementptr inbounds %struct.cmac, %struct.cmac* %41, i32 0, i32 0
  %43 = load i32, i32* %42, align 8
  %44 = load i32, i32* %6, align 4
  %45 = call i32 @REG_MODE_CFG(i32 %44)
  %46 = load i32, i32* %5, align 4
  %47 = call i32 @vsc_write(i32 %43, i32 %45, i32 %46)
  ret i32 0
}

declare dso_local i32 @vsc_write(i32, i32, i32) #1

declare dso_local i32 @REG_HIGH_LOW_WM(i32, i32) #1

declare dso_local i32 @vsc_read(i32, i32, i32*) #1

declare dso_local i32 @REG_MODE_CFG(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
